check_output_2.txt
    Checking lightspeed v0.1.0 (/Users/samhren/Code/Lights)
error[E0425]: cannot find value `global_json` in this scope
   --> src/db.rs:322:26
    |
322 |             let global = global_json
    |                          ^^^^^^^^^^^ not found in this scope

error[E0277]: the size for values of type `str` cannot be known at compilation time
   --> src/db.rs:323:23
    |
323 |                 .map(|json| serde_json::from_str(&json))
    |                       ^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `str`
    = note: all function arguments must have a statically known size

warning: unused variable: `priority`
   --> src/engine.rs:446:17
    |
446 |             let priority = 100; // Default priority
    |                 ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_priority`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `passes_bounds`
   --> src/engine.rs:658:29
    |
658 |                         let passes_bounds = (mask_local_x >= -(half_w + EPSILON) && mask_local_x <= (half_w + EPSILON)) &&
    |                             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_passes_bounds`

warning: unused variable: `in_bar`
   --> src/engine.rs:661:29
    |
661 |                         let in_bar = dist_to_bar <= bar_width;
    |                             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_in_bar`

warning: unused variable: `near_left_edge`
   --> src/engine.rs:664:29
    |
664 |                         let near_left_edge = mask_local_x < -half_w + 0.3;
    |                             ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_near_left_edge`

warning: unused variable: `near_right_edge`
   --> src/engine.rs:665:29
    |
665 |                         let near_right_edge = mask_local_x > half_w - 0.3;
    |                             ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_near_right_edge`

warning: unused variable: `local_y`
   --> src/engine.rs:727:25
    |
727 |                     let local_y = 0.0;
    |                         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_local_y`

warning: variable does not need to be mutable
   --> src/main.rs:123:13
    |
123 |         let mut db = match Database::open(&db_path) {
    |             ----^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0425.
For more information about an error, try `rustc --explain E0277`.
warning: `lightspeed` (bin "lightspeed") generated 7 warnings
error: could not compile `lightspeed` (bin "lightspeed") due to 2 previous errors; 7 warnings emitted
